[gd_scene load_steps=29 format=2]

[ext_resource path="res://font/SF TransRobotics.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/props/monitor.gd" type="Script" id=2]
[ext_resource path="res://scenes/props/monitor_green_stand.tres" type="Material" id=3]
[ext_resource path="res://scenes/textures/lab_ceiling_lamp_emission.png" type="Texture" id=4]
[ext_resource path="res://scenes/chars/player_labels.tres" type="DynamicFont" id=5]
[ext_resource path="res://scenes/props/obstacle.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/props/ramp.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/audio/click3.wav" type="AudioStream" id=8]
[ext_resource path="res://scenes/props/lab_floor.tres" type="Material" id=9]
[ext_resource path="res://scenes/audio/correct.wav" type="AudioStream" id=10]
[ext_resource path="res://scenes/audio/error1.wav" type="AudioStream" id=11]

[sub_resource type="DynamicFont" id=1]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 64
outline_size = 1
outline_color = Color( 0, 0, 1, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="QuadMesh" id=3]
size = Vector2( 7, 5 )

[sub_resource type="ViewportTexture" id=4]
viewport_path = NodePath("Label3D/Viewport")

[sub_resource type="SpatialMaterial" id=5]
resource_local_to_scene = true
flags_transparent = true
flags_unshaded = true
flags_albedo_tex_force_srgb = true
albedo_texture = SubResource( 4 )

[sub_resource type="CubeMesh" id=6]
size = Vector3( 7.5, 5.5, 0.4 )

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="CubeMesh" id=8]
material = ExtResource( 9 )
size = Vector3( 0.2, 0.5, 0.2 )

[sub_resource type="CylinderMesh" id=9]
top_radius = 0.2
bottom_radius = 0.2
height = 0.5

[sub_resource type="SpatialMaterial" id=10]
albedo_color = Color( 0.458824, 0.458824, 0.458824, 1 )

[sub_resource type="CylinderMesh" id=11]
top_radius = 0.1
bottom_radius = 0.1
height = 0.2

[sub_resource type="SpatialMaterial" id=12]
albedo_color = Color( 1, 0, 0, 1 )
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="BoxShape" id=13]
extents = Vector3( 1, 0.6, 1 )

[sub_resource type="CubeMesh" id=14]
size = Vector3( 2, 1, 2 )

[sub_resource type="CubeMesh" id=15]
size = Vector3( 2, 1, 2 )

[sub_resource type="SpatialMaterial" id=16]
albedo_color = Color( 1, 0, 0, 1 )
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
emission_texture = ExtResource( 4 )
uv1_scale = Vector3( 0.1, 0.2, 0.1 )
uv1_offset = Vector3( 0.5, 0.5, 0.5 )
uv1_triplanar = true

[sub_resource type="BoxShape" id=17]

[node name="monitor" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.5, -13 )
script = ExtResource( 2 )

[node name="Label3D" type="Spatial" parent="."]

[node name="Viewport" type="Viewport" parent="Label3D"]
size = Vector2( 1024, 800 )
transparent_bg = true
render_target_v_flip = true

[node name="Control" type="Control" parent="Label3D/Viewport"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_style" type="Label" parent="Label3D/Viewport/Control"]
anchor_left = 0.05
anchor_top = 0.05
anchor_right = 0.95
anchor_bottom = 0.95
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0.54902, 0.54902, 0.627451 )
custom_colors/font_color_shadow = Color( 0.509804, 0, 0, 0.627451 )
custom_constants/shadow_offset_x = 16
text = "0x80070057, WindowsUpdate_8007002C,
WindowsUpdate_dt000, 0x80072ee7, 80070005,
80240020, 80246007, 80070004â€¦ and many more.

EPERM 1 Operation not permitted
ENOENT 2 No such file or directory
ESRCH 3 No such process















EINTR 4 Interrupted system call
EIO 5 Input/output error
ENXIO 6 No such device or address
E2BIG 7 Argument list too long
ENOEXEC 8 Exec format error
EBADF 9 Bad file descriptor
ECHILD 10 No child processes
EAGAIN 11 Resource temporarily unavailable
ENOMEM 12 Cannot allocate memory
EACCES 13 Permission denied
EFAULT 14 Bad address
ENOTBLK 15 Block device required
EBUSY 16 Device or resource busy
EEXIST 17 File exists
EXDEV 18 Invalid cross-device link
ENODEV 19 No such device
ENOTDIR 20 Not a directory
EISDIR 21 Is a directory
EINVAL 22 Invalid argument
ENFILE 23 Too many open files in system
EMFILE 24 Too many open files
ENOTTY 25 Inappropriate ioctl for device
ETXTBSY 26 Text file busy
EFBIG 27 File too large
ENOSPC 28 No space left on device
ESPIPE 29 Illegal seek
EROFS 30 Read-only file system
EMLINK 31 Too many links
EPIPE 32 Broken pipe
EDOM 33 Numerical argument out of domain
ERANGE 34 Numerical result out of range
EDEADLK 35 Resource deadlock avoided
ENAMETOOLONG 36 File name too long
ENOLCK 37 No locks available
ENOSYS 38 Function not implemented
ENOTEMPTY 39 Directory not empty
ELOOP 40 Too many levels of symbolic links
EWOULDBLOCK 11 Resource temporarily unavailable
ENOMSG 42 No message of desired type
EIDRM 43 Identifier removed
ECHRNG 44 Channel number out of range
EL2NSYNC 45 Level 2 not synchronized
EL3HLT 46 Level 3 halted
EL3RST 47 Level 3 reset
ELNRNG 48 Link number out of range
EUNATCH 49 Protocol driver not attached
ENOCSI 50 No CSI structure available
EL2HLT 51 Level 2 halted
EBADE 52 Invalid exchange
EBADR 53 Invalid request descriptor
EXFULL 54 Exchange full
ENOANO 55 No anode
EBADRQC 56 Invalid request code
EBADSLT 57 Invalid slot
EDEADLOCK 35 Resource deadlock avoided
EBFONT 59 Bad font file format
ENOSTR 60 Device not a stream
ENODATA 61 No data available
ETIME 62 Timer expired
ENOSR 63 Out of streams resources
ENONET 64 Machine is not on the network
ENOPKG 65 Package not installed
EREMOTE 66 Object is remote
ENOLINK 67 Link has been severed
EADV 68 Advertise error
ESRMNT 69 Srmount error
ECOMM 70 Communication error on send
EPROTO 71 Protocol error
EMULTIHOP 72 Multihop attempted
EDOTDOT 73 RFS specific error
EBADMSG 74 Bad message
EOVERFLOW 75 Value too large for defined data type
ENOTUNIQ 76 Name not unique on network
EBADFD 77 File descriptor in bad state
EREMCHG 78 Remote address changed
ELIBACC 79 Can not access a needed shared library
ELIBBAD 80 Accessing a corrupted shared library
ELIBSCN 81 .lib section in a.out corrupted
ELIBMAX 82 Attempting to link in too many shared libraries
ELIBEXEC 83 Cannot exec a shared library directly
EILSEQ 84 Invalid or incomplete multibyte or wide character
ERESTART 85 Interrupted system call should be restarted
ESTRPIPE 86 Streams pipe error
EUSERS 87 Too many users
ENOTSOCK 88 Socket operation on non-socket
EDESTADDRREQ 89 Destination address required
EMSGSIZE 90 Message too long
EPROTOTYPE 91 Protocol wrong type for socket
ENOPROTOOPT 92 Protocol not available
EPROTONOSUPPORT 93 Protocol not supported
ESOCKTNOSUPPORT 94 Socket type not supported
EOPNOTSUPP 95 Operation not supported
EPFNOSUPPORT 96 Protocol family not supported
EAFNOSUPPORT 97 Address family not supported by protocol
EADDRINUSE 98 Address already in use
EADDRNOTAVAIL 99 Cannot assign requested address
ENETDOWN 100 Network is down
ENETUNREACH 101 Network is unreachable
ENETRESET 102 Network dropped connection on reset
ECONNABORTED 103 Software caused connection abort
ECONNRESET 104 Connection reset by peer
ENOBUFS 105 No buffer space available
EISCONN 106 Transport endpoint is already connected
ENOTCONN 107 Transport endpoint is not connected
ESHUTDOWN 108 Cannot send after transport endpoint shutdown
ETOOMANYREFS 109 Too many references: cannot splice
ETIMEDOUT 110 Connection timed out
ECONNREFUSED 111 Connection refused
EHOSTDOWN 112 Host is down
EHOSTUNREACH 113 No route to host
EALREADY 114 Operation already in progress
EINPROGRESS 115 Operation now in progress
ESTALE 116 Stale file handle
EUCLEAN 117 Structure needs cleaning
ENOTNAM 118 Not a XENIX named type file
ENAVAIL 119 No XENIX semaphores available
EISNAM 120 Is a named type file
EREMOTEIO 121 Remote I/O error
EDQUOT 122 Disk quota exceeded
ENOMEDIUM 123 No medium found
EMEDIUMTYPE 124 Wrong medium type
ECANCELED 125 Operation canceled
ENOKEY 126 Required key not available
EKEYEXPIRED 127 Key has expired
EKEYREVOKED 128 Key has been revoked
EKEYREJECTED 129 Key was rejected by service
EOWNERDEAD 130 Owner died
ENOTRECOVERABLE 131 State not recoverable
ERFKILL 132 Operation not possible due to RF-kill
EHWPOISON 133 Memory page has hardware error
ENOTSUP 95 Operation not supported"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_main" type="Label" parent="Label3D/Viewport/Control"]
anchor_left = 0.1
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 1, 0.627451, 1 )
text = "[sys]: ARE YOU STILL THerE? OR NOTTTT"
valign = 1
autowrap = true

[node name="Label_question_counter" type="Label" parent="Label3D/Viewport/Control"]
anchor_left = 0.45
anchor_top = 0.1
anchor_right = 0.55
anchor_bottom = 0.2
margin_left = -20.0
margin_right = 20.0
margin_bottom = 14.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 1, 0.627451, 1 )
custom_colors/font_color_shadow = Color( 1, 0, 0, 1 )
custom_constants/shadow_offset_x = 4
text = "14/32"
align = 1
valign = 1

[node name="quad" type="MeshInstance" parent="Label3D/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.5, -13.59 )
mesh = SubResource( 3 )
material/0 = SubResource( 5 )

[node name="monitor_body" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.8 )
mesh = SubResource( 6 )
material/0 = SubResource( 7 )

[node name="correct" type="AudioStreamPlayer3D" parent="monitor_body"]
stream = ExtResource( 10 )
bus = "monitor"

[node name="error" type="AudioStreamPlayer3D" parent="monitor_body"]
stream = ExtResource( 11 )
bus = "monitor"

[node name="Timer" type="Timer" parent="monitor_body"]
wait_time = 2.0
one_shot = true

[node name="surveillance_base" type="MeshInstance" parent="."]
transform = Transform( 1, -4.37114e-08, -4.37114e-08, 4.37114e-08, -4.37114e-08, 1, -4.37114e-08, -1, -4.37114e-08, -9.66338e-13, 4, -0.8 )
mesh = SubResource( 8 )
material/0 = null

[node name="rotor" type="Spatial" parent="surveillance_base"]
transform = Transform( 1, 0, -1.64203e-15, 0, 1, 0, -1.64203e-15, 0, 1, 3.41061e-13, -0.250477, 0 )

[node name="surveillance_camera" type="MeshInstance" parent="surveillance_base/rotor"]
transform = Transform( 1, 1.59995e-08, -2.77119e-08, -2.77119e-08, 0.866025, -0.5, 1.59995e-08, 0.5, 0.866025, 0, -0.249523, 0 )
mesh = SubResource( 9 )
material/0 = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="surveillance_base/rotor/surveillance_camera"]
transform = Transform( 1, 0, 0, 0, 1, 7.17753e-23, 0, 0, 1, 0, -0.2, 0 )
mesh = SubResource( 11 )
material/0 = SubResource( 12 )

[node name="green" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, -7, 8 )

[node name="Area_green" type="Area" parent="green"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="green/Area_green"]
shape = SubResource( 13 )

[node name="MeshInstance" type="MeshInstance" parent="green/Area_green"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )
mesh = SubResource( 14 )
material/0 = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="click" type="AudioStreamPlayer3D" parent="green"]
stream = ExtResource( 8 )
bus = "click"

[node name="red" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, -7, 8 )

[node name="Area_red" type="Area" parent="red"]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="red/Area_red"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 4.76837e-07, 0.5, 0 )
shape = SubResource( 13 )

[node name="MeshInstance" type="MeshInstance" parent="red/Area_red"]
mesh = SubResource( 15 )
material/0 = SubResource( 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="click" type="AudioStreamPlayer3D" parent="red"]
stream = ExtResource( 8 )
bus = "click"

[node name="obstacle1" parent="." instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 3.49691e-07, -6.5, 8 )

[node name="obstacle2" parent="." instance=ExtResource( 6 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 3.49691e-07, -7.5, 8 )

[node name="ramp1" parent="." instance=ExtResource( 7 )]
transform = Transform( -4.37114e-08, 0, 1, 1, -4.37114e-08, 4.37114e-08, 4.37114e-08, 1, 1.91069e-15, 0, -6, 9.5 )

[node name="stand" type="Spatial" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 3.49691e-07, -6.5, 8 )

[node name="Area_stand" type="Area" parent="stand"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="stand/Area_stand"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
shape = SubResource( 17 )
[connection signal="timeout" from="monitor_body/Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="green/Area_green" to="." method="_on_Area_green_body_entered"]
[connection signal="body_entered" from="red/Area_red" to="." method="_on_Area_red_body_entered"]
[connection signal="body_entered" from="stand/Area_stand" to="." method="_on_Area_stand_body_entered"]
